tests/baselines/reference/moduleNewExportBug.errors.txt
==== tests/cases/compiler/moduleNewExportBug.ts (1 errors) ====
    module mod1 {
        interface mInt {
            new (bar:any):any;
            foo (bar:any):any;
        }
     
        class C { public moo() {}}
    }
    
    var c : mod1.C; // ERROR: C should not be visible
                 ~
!!! moduleNewExportBug.ts(10,14): error TS2094: The property 'C' does not exist on value of type 'mod1'.
    
    
    